# CartelMusicBot

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
Docker/: Dockerfile  docker-compose.yml
buildfiles/: Dockerfile  docker-compose.yml
src/: main.py
src/FSM/: fsm_user.py
src/data/: config.py  set_up_user.json
src/database/: process.py
src/database/migrations/: env.py
src/dialogs/: __init__.py  start.py  test.py
src/dialogs/admin/: MAIN.py  __init__.py  common.py  menu.py  registration.py
src/dialogs/listening/: __init__.py  edit.py  menu.py  new.py
src/dialogs/my_studio/: __init__.py  menu.py
src/dialogs/profile/: __init__.py  menu.py
src/dialogs/registrations/: __init__.py  nickname.py
src/dialogs/services/: track_info_helper.py
src/dialogs/tracks/: __init__.py  approved.py  approved_tracks.py  listening.py  my_tracks.py  rejected.py  rejected_tracks.py
src/dialogs/utils/: __init__.py  buttons.py  calendar.py  common.py
src/filters/: check_privilege.py
src/handlers/: __init__.py
src/handlers/group/: __init__.py  listening_approvement.py
src/handlers/private/: __init__.py
src/keyboards/: start.py
src/keyboards/default/: basic.py  consts.py
src/middlewares/: ban.py  chat_actions.py  check_privilege.py  config_middleware.py  employee.py  logging.py  throttling.py
src/models/: album.py  approvement.py  chats.py  comments_template.py  employee.py  listening_templates.py  multi_request.py  personal_data.py  personal_data_comment.py  personal_data_template.py  release.py  tables.py  track.py  track_info.py  tracks.py  user.py
src/models/logs/: emp.py  (+4 more)
src/service/: APScheduler.py  diologs_collector.py
src/utils/: __init__.py  commands.py  dialogs.py  enums.py  fsm.py  logging.py  notify.py
src/web_handlers/: tg_updates.py
(+142 files in other folders)
