[tool.poetry]
name = "cartelmusicbot"
version = "0.1.0"
description = ""
authors = ["Tima <timofey.lazarev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
environs = "^9.5.0"
asyncpg = "^0.27.0"
apscheduler = "^3.10.1"
redis = "^4.5.5"
structlog = "^23.1.0"
aiogram = "^3.0.0b7"
sqlalchemy = "^2.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
