[tool.poetry]
name = "cartelmusicbot"
version = "0.1.0"
description = ""
authors = ["Tima <timofey.lazarev@gmail.com>"]
packages = [
    {include = "src"}
]


[tool.poetry.dependencies]
docxtpl = "^0.16.7"
python = "^3.10"
environs = "^9.5.0"
asyncpg = "^0.27.0"
apscheduler = "^3.10.1"
redis = "^4.5.5"
structlog = "^23.1.0"
aiogram = "3.0.0b7"
sqlalchemy = "^2.0.15"
aiogram-dialog = "2.0.0b20"
alembic = "^1.11.1"
babel = "^2.12.1"
adaptix = "^3.0.0a4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cartel_bot = "src.main:run"