[tool.poetry]
name = "cartelmusicbot"
version = "1.0.0b1"
description = ""
authors = ["Timofey <https://t.me/getxp>", "Kolya <https://t.me/nownuserr>"]
packages = [
    {include = "src"}
]


[tool.poetry.dependencies]
docxtpl = "^0.16.7"
python = "^3.10"
environs = "^9.5.0"
asyncpg = "^0.28.0"
apscheduler = "^4.0.0a2"
redis = "^5.0.0rc2"
structlog = "^23.1.0"
aiogram = "3.0.0b9"
sqlalchemy = "^2.0.15"
aiogram-dialog = "2.0.0b21"
alembic = "^1.11.1"
babel = "^2.12.1"
adaptix = "^3.0.0a4"
sulguk = "^0.2"
validators = "^0.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cartel_bot = "src.main:run"